# ks-s22-mods

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
ble_tool/client/: Cargo.toml
ble_tool/lib/src/: lib.rs  logger.rs  process_command.rs
ble_tool/simulator/: Cargo.toml
client/: Cargo.toml
client/src/: main.rs
ghidra/ks-s22-mods.rep/: project.prp  projectState
ghidra/ks22-2.27.rep/: project.prp  projectState
ghidra/ks22-2.27.rep/idata/: ~index.bak
ghidra/ks22-2.27.rep/idata/00/: 00000000.prp  00000002.prp
ghidra/ks22-2.27.rep/idata/00/~00000000.db/: db.3.gbf
ghidra/ks22-2.27.rep/idata/00/~00000002.db/: changeA.grf  changeB.grf  snapshotA.grf  snapshotB.grf
ghidra/ks22-2.27.rep/user/: ~journal.bak
ks-s22-mods.rep/: project.prp
lib/: Cargo.toml
lib/src/: ble.rs  lib.rs  packet.rs
s22_display/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.good  sdkconfig.old
s22_display/main/: CMakeLists.txt  battery.c  battery.h  buttons.c  buttons.h  gradient.c  gradient.h  icons.h  leds.c  leds.h  s22_display.c  s22_display.h  s22_model.c  s22_model.h  sound.c  sound.h  spiffs.c  spiffs.h
s22_display/main/audio/: power_on.pcm  rick.pcm
s22_display/main/ble/: ble.c  ble.h  client.c  client.h  packet.c  packet.h
s22_display/main/ble/utils/: misc.c  peer.c  utils.h
s22_display/main/ble_client/: ble_client.c  ble_client.h
s22_display/main/ui/: CMakeLists.txt  filelist.txt  screen1.sll  screen1.spj  screen1_events.py  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
s22_display/main/ui/assets/: bg.xcf  ks_logo.xcf  ui_font_Arcade100.fcfg  ui_font_FontAwesome35.fcfg  ui_font_FontAwesome45.fcfg
s22_display/main/ui/fonts/: ui_font_Arcade100.c  ui_font_Arcade80.c  ui_font_FontAwesome35.c  ui_font_FontAwesome45.c
s22_display/main/ui/images/: ui_img_bg_png.c  ui_img_ks_logo_png.c
s22_display/main/ui/screens/: ui_BootConnect.c  ui_Charging.c  ui_Riding.c  ui_Screen1.c
saleae/: ble_sniff.sal  screen_board.sal  screen_board2.sal
simulator/src/: main.rs
