[package]
name = "s22-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluer = { version = "0.15.7", features = [ "full" ] }
log = "0.4.17"
anyhow = "1.0.71"
tokio = { version = "1.28.0", features = [ "full" ] }
chrono = "0.4.24"
uuid = "1.3.2"
futures = "0.3"
flume = "0.10.14"
num = "0.4.0"
num-traits = "0.2"
num-derive = "0.3"
s22_library = { path = "../lib" }